fixed BU-Bug with too much flexing going on - works without!
SRFCMSAL-424

--- a/source/_patterns/20-molecules/footer/footer.scss
+++ b/source/_patterns/20-molecules/footer/footer.scss
@@ -110,8 +110,6 @@
 
 .footer-bottom__imprint-content,
 .footer-bottom__imprint-links {
-  flex: 1 1 50%;
-
   @include smartphone {
     padding: 0 24px;
   }
@@ -144,7 +142,6 @@
 }
 
 .footer-bottom__link-item {
-  flex: 1 0 0%;
   margin: 0;
   padding: 0;
   display: flex;
@@ -174,6 +171,10 @@
 
   &:hover::after {
     display: none;
+  }
+
+  @include smartphone {
+    flex: 1 0 0%;
   }
 
   @include tablet-up {
